# generic-traverse

./: .gitignore  .travis.yml  generic-traverse.cabal
src/: Boggle.hs  BoggleDemo.hs
src/Boggle/: Demo.hs  Enum.hs  Read.hs  Shape.hs
src/Control/Lens/: Generic.hs
src/Data/Functor/Rep/: GRepresentable.hs  Generic.hs  GenericLens.hs
src/Data/Traversable/: Generic.hs
