name:                generic-traverse
version:             0.1
synopsis:            Efficient generation of "traverse" using GHC.Generics
description:         This package demonstrates a technique for recovering
                     efficient traversals from inefficient implementations.
                     These inefficient implementations are common in code
                     generated naïvely with GHC.Generics.

homepage:            github.com/glguy/generic-traverse
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2014-2015 Eric Mertens
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  exposed-modules:     Data.Traversable.Generic
                       Boggle
                       BoggleDemo

  build-depends:       base             >=4.8 && <4.9,
                       kan-extensions   >=4.2 && <4.3,
                       lens             >=4.13 && <4.14

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
